--- a/config-data/clientms.yaml
+++ b/config-data/clientms.yaml
@@ -13,5 +13,5 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
   mvc:
     pathmatch:
-      matching-strategy: ANT_PATH_MATCHER
+      matching-strategy: ant_path_matcher
 
