--- a/config-data/imagems.yaml
+++ b/config-data/imagems.yaml
@@ -6,4 +6,12 @@ spring:
       port: 27017
       host: localhost
       database: imagemicro
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
+    instance:
+      hostname: localhost
 
